java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/Snippet.java
/** {<warning descr="'@snippet' tag is not available at this language level">@snippet</warning> :
 *  <error descr="'class' or 'interface' expected">Body</error>
 * }
 */
class A {
}